Update homepage URL

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/onivim/oni-types/issues"
   },
-  "homepage": "https://github.com/onivim/oni-types#readme"
+  "homepage": "http://onivim.io"
 }
