--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Shared types and interfaces used across Oni",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
