--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
     "@types/node": "^8.0.53",
     "typescript": "^2.8.3"
   },
-  "dependencies": {
-    "rxjs": "5.5.10"
-  }
+  "dependencies": {}
 }
